# object_detection_api

./: .gitignore  Dockerfile  README.md  Theory_Questions.md  pyproject.toml
app/: main.py  utils.py
